--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
 
       <nav class="navbar">
         <a href="#home" style="--i: 1" class="active">Home</a>
-        <a href="#about" style="--i: 2">About</a>
+        <a href="#achievement" style="--i: 2">Achievements</a>
         <a href="#projects" style="--i: 3">Projects</a>
         <a href="#skills" style="--i: 4">Skills</a>
         <a href="#contact" style="--i: 5">Contact</a>
@@ -56,7 +56,7 @@
     </section>
 
     <!-- about section -->
-    <section class="about" id="about">
+    <!-- <section class="about" id="about">
       <h2 class="heading">About<span> Me</span></h2>
       <div class="about-img">
         <img src="home.png" />
@@ -75,10 +75,12 @@
           <a href="#" class="btn">Read More</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Achivements !-->
     <section class="achievements" id="achievement">
+      <br>
+      <br>
       <h2 class="heading">My <span>Achivements</span></h2>
       <div class="achievements-row">
         <div class="achievements-coloumn">
@@ -180,6 +182,8 @@
 
     <!-- Projects !-->
     <section class="swiper mySwiper" id="projects">
+      <br>
+      <br>
       <h2 class="heading">My <span>Projects</span></h2>
       <div class="swiper-wrapper">
         <div class="card swiper-slide">
@@ -297,6 +301,8 @@
     </section>
 
     <div class="container">
+      <br>
+      <br>
       <section class="Projects" id="Electronics">
         <h2 class="heading">My <span>Hobbies</span></h2>
         <div class="product">
@@ -339,6 +345,8 @@
 
     <!-- Skills -->
     <section id="skills" class="skills">
+      <br>
+      <br>
       <div class="main-text">
         <h2 class="heading">My <span>Skills</span></h2>
       </div>
@@ -467,6 +475,8 @@
 
     <!--   Contact -->
     <section class="contact" id="contact">
+      <br>
+      <br>
       <h2 class="heading">Contact <span>Me</span></h2>
       <form action="#" method="post">
         <div class="input-box">
