--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfoio Website</title>
   </head>
   <body>
+    <div class="top_progress_bar"></div>
     <header class="header">
       <a href="#home" class="logo">Rajat.</a>
 
@@ -30,7 +31,7 @@
         <a href="#contact" style="--i: 5">Contact</a>
       </nav>
     </header>
-
+    
     <section class="home" id="home">
       <div class="home-content">
         <h3>Hello,I am <span class="wave">👋</span></h3>
