--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <nav class="navbar">
         <a href="#home" style="--i: 1" class="active">Home</a>
-        <a href="#achievement" style="--i: 2">Achievements</a>
-        <a href="#projects" style="--i: 3">Projects</a>
+        <a href="#projects" style="--i: 2">Projects</a>
+        <a href="#achievement" style="--i: 3">Achievements</a>
         <a href="#skills" style="--i: 4">Skills</a>
         <a href="#contact" style="--i: 5">Contact</a>
       </nav>
@@ -38,10 +38,11 @@
         <h1><span>Rajat</span> Deore</h1>
         <h3>And I am a <span class="multiple-text"></span></h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit
-          illum nemo dolorum laboriosam debitis officia mollitia reiciendis
-          distinctio expedita dolore? Voluptates enim modi quidem distinctio
-          obcaecati, optio voluptatem explicabo voluptatibus!
+          I'm a web developer that thrives on converting concepts into alluring digital experiences.
+          My passion for creativity and appreciation for exquisite design fuel my work. 
+          I blend the science of coding with the art of aesthetics to create websites that not only look gorgeous but also 
+          operate flawlessly. I have an eye for detail and a knack for solving problems. Let's go out on a journey where
+          creativity and technology collide, and together, we'll realise your digital aspirations.
         </p>
         <div class="social-media">
           <a href="#" style="--i: 6"><i class="bx bxl-facebook"></i></a>
@@ -49,7 +50,7 @@
           <a href="#" style="--i: 8"><i class="bx bxl-linkedin"></i></a>
           <a href="#" style="--i: 9"><i class="bx bxl-whatsapp"></i></a>
         </div>
-        <a href="#" class="btn">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1FBUvEbLFrrd_PbSLRZhhHq0bb95t1KQ8/view?usp=sharing" class="btn">Download Resume</a>
       </div>
       <div class="home-img">
         <img src="home.png" alt="" />
@@ -73,10 +74,130 @@
         </p>
 
         <div class="btn-box btns">
-          <a href="#" class="btn">Read More</a>
+          <a href="#" class="btn">Demo</a>
         </div>
       </div>
     </section> -->
+
+    <!-- Projects !-->
+    <section class="swiper mySwiper" id="projects">
+      <br>
+      <br>
+      <h2 class="heading">My <span>Projects</span></h2>
+      <div class="swiper-wrapper">
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user1.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user2.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user2.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user2.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user2.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user3.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZr</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+
+        <div class="card swiper-slide">
+          <div class="card__image">
+            <img src="/images/user4.jpg" alt="card image" />
+          </div>
+
+          <div class="card__content">
+            <span class="card__title">XYZ</span>
+
+            <p class="card__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+              veritatis labore provident non tempora odio est sunt, ipsum
+            </p>
+            <button class="card__btn">Demo</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Achivements !-->
     <section class="achievements" id="achievement">
@@ -85,30 +206,31 @@
       <h2 class="heading">My <span>Achivements</span></h2>
       <div class="achievements-row">
         <div class="achievements-coloumn">
-          <h3 class="title"><b>Achivements</b></h3>
           <div class="achievements-box">
             <div class="achievements-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i>2020-2021</div>
-                <h3>XYZ</h3>
+                <div class="year"><i class="bx bxs-calendar"></i>2021-2022</div>
+                <h3>Airtel IQ Hackathon <span>FINALIST</span></h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Natus, reiciendis inventore recusandae sed quo ullam minima!
-                  Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                  necessitatibus! Obcaecati praesentium nihil modi autem.
+                  Our team's commitment and ingenuity showed through as we set off 
+                  on an innovative adventure at the Airtel IQ Hackathon. We happily 
+                  achieved one of India's top 10 finalists as a result of our efforts. 
+                  We created a cutting-edge WhatsApp chatbot for travel and tourism that simplifies
+                  discovery and expands horizons for those with wanderlust, driven by a
+                  love of technology and a desire to improve travel experiences.
                 </p>
               </div>
             </div>
 
             <div class="achievements-content">
               <div class="content">
-                <div class="year"><i class="bx bxs-calendar"></i>2021-2022</div>
-                <h3>XYZ</h3>
+                <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
+                <h3>EYIC Eyantra</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Natus, reiciendis inventore recusandae sed quo ullam minima!
-                  Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                  necessitatibus! Obcaecati praesentium nihil modi autem.
+                  In the EYIC Eyantra challenge, we reached the semifinals with our innovation. 
+                  We crafted a disease-detecting drone for leaves and a smart soil testing hardware,
+                  amplifying agriculture's potential with cutting-edge technology. Our journey 
+                  reflects the fusion of tech and farming for a greener tomorrow.
                 </p>
               </div>
             </div>
@@ -181,126 +303,6 @@
       </div>
     </section>
 
-    <!-- Projects !-->
-    <section class="swiper mySwiper" id="projects">
-      <br>
-      <br>
-      <h2 class="heading">My <span>Projects</span></h2>
-      <div class="swiper-wrapper">
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user1.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user2.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user3.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZr</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-
-        <div class="card swiper-slide">
-          <div class="card__image">
-            <img src="/images/user4.jpg" alt="card image" />
-          </div>
-
-          <div class="card__content">
-            <span class="card__title">XYZ</span>
-
-            <p class="card__text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-              veritatis labore provident non tempora odio est sunt, ipsum
-            </p>
-            <button class="card__btn">View More</button>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <div class="container">
       <br>
       <br>
@@ -346,8 +348,6 @@
 
     <!-- Skills -->
     <section id="skills" class="skills">
-      <br>
-      <br>
       <div class="main-text">
         <h2 class="heading">My <span>Skills</span></h2>
       </div>
@@ -356,117 +356,143 @@
           <div class="skill-bar">
             <div class="info">
               <p>JAVA</p>
-              <p>90%</p>
+              <p>80%</p>
             </div>
             <div class="bar">
               <span class="java"></span>
             </div>
           </div>
+          
           <div class="skill-bar">
             <div class="info">
-              <p>Artificial Intelligence</p>
-              <p>80%</p>
+              <p>C++</p>
+              <p>70%</p>
             </div>
             <div class="bar">
-              <span class="ai"></span>
+              <span class="cpp"></span>
             </div>
           </div>
+
           <div class="skill-bar">
             <div class="info">
               <p>Python</p>
-              <p>70%</p>
+              <p>60%</p>
             </div>
             <div class="bar">
               <span class="python"></span>
             </div>
           </div>
-          <div class="skill-bar">
-            <div class="info">
-              <p>Javascript</p>
-              <p>90%</p>
-            </div>
-            <div class="bar">
-              <span class="javascript"></span>
-            </div>
-          </div>
+
           <div class="skill-bar">
             <div class="info">
               <p>HTML</p>
-              <p>80%</p>
+              <p>95%</p>
             </div>
             <div class="bar">
               <span class="html"></span>
             </div>
           </div>
+
           <div class="skill-bar">
             <div class="info">
               <p>CSS</p>
-              <p>70%</p>
+              <p>90%</p>
             </div>
             <div class="bar">
               <span class="css"></span>
             </div>
           </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>JavaScript</p>
+              <p>80%</p>
+            </div>
+            <div class="bar">
+              <span class="javascript"></span>
+            </div>
+          </div>
+
+          <div class="skill-bar">
+            <div class="info">
+              <p>BootStrap</p>
+              <p>80%</p>
+            </div>
+            <div class="bar">
+              <span class="boot"></span>
+            </div>
+          </div>
         </div>
+
         <div class="skill-right">
           <div class="professional">
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
-                <p>90%</p>
+                <p>Deep Learning</p>
+                <p>65%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="dl"></span>
               </div>
             </div>
 
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
-                <p>90%</p>
+                <p>Node Js</p>
+                <p>80%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="node"></span>
               </div>
             </div>
 
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
+                <p>React Js</p>
                 <p>90%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="react"></span>
               </div>
             </div>
 
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
+                <p>Mongo DB</p>
                 <p>90%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="mongo"></span>
               </div>
             </div>
 
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
-                <p>90%</p>
+                <p>Express Js</p>
+                <p>75%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="exp"></span>
               </div>
             </div>
 
             <div class="skill-bar">
               <div class="info">
-                <p>xyz</p>
+                <p>GitHub</p>
                 <p>90%</p>
               </div>
               <div class="bar">
-                <span class="movement"></span>
+                <span class="git"></span>
+              </div>
+            </div>
+            
+            <div class="skill-bar">
+              <div class="info">
+                <p>FireBase</p>
+                <p>60%</p>
+              </div>
+              <div class="bar">
+                <span class="fire"></span>
               </div>
             </div>
           </div>
@@ -555,7 +581,7 @@
             <i class="bx bxl-whatsapp"></i>
           </div>
         </div>
-        <p>Copyright © 2023 Portfolio.com All writes reserved</p>
+        <p>Copyright © 2023 Portfolio.com All rights reserved</p>
       </footer>
     </section>
 
