--- a/index.html
+++ b/index.html
@@ -219,32 +219,47 @@
                   discovery and expands horizons for those with wanderlust, driven by a
                   love of technology and a desire to improve travel experiences.
                 </p>
+                <br>
+                <a href=""><h3>Certificate</h3></a>
               </div>
             </div>
 
             <div class="achievements-content">
               <div class="content">
                 <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
-                <h3>EYIC Eyantra</h3>
+                <h3>GDSC WEB HEAD</h3>
                 <p>
-                  In the EYIC Eyantra challenge, we reached the semifinals with our innovation. 
-                  We crafted a disease-detecting drone for leaves and a smart soil testing hardware,
-                  amplifying agriculture's potential with cutting-edge technology. Our journey 
-                  reflects the fusion of tech and farming for a greener tomorrow.
+                  As the <span> GDSC Web Head </span> and a speaker, I oversaw web projects and provided 
+                  students with knowledge about web development, promoting a thriving 
+                  learning environment. My dual position shows my love of education and leadership.
                 </p>
+                <br>
               </div>
             </div>
 
             <div class="achievements-content">
               <div class="content">
                 <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
-                <h3>XYZ</h3>
+                <h3>JSPM Prakalp</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Natus, reiciendis inventore recusandae sed quo ullam minima!
-                  Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                  necessitatibus! Obcaecati praesentium nihil modi autem.
+                  Our ground-breaking project helped us <span>WIN</span> the JSPM Prakalp National Project Competition. 
+                  Our creative solution highlighted our dedication to excellence and problem-solving skills.
                 </p>
+                <br>
+                <a href=""><h3>Certificate</h3></a>
+              </div>
+            </div>
+            
+            <div class="achievements-content">
+              <div class="content">
+                <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
+                <h3>GeeksForGeeks Solving for India Hackathon</h3>
+                <p>
+                  We advanced to the quarterfinals of the GeekforGrrks "Solving for India" Hackathon by using creative 
+                  solutions to real-world problems. Our success demonstrates our commitment to using technology to create lasting change.
+                </p>
+                <br>
+                <a href=""><h3>Certificate</h3></a>
               </div>
             </div>
           </div>
@@ -255,46 +270,57 @@
             <div class="achievements-box">
               <div class="achievements-content">
                 <div class="content">
-                  <div class="year">
-                    <i class="bx bxs-calendar"></i>2020-2021
-                  </div>
-                  <h3>XYZ</h3>
+                  <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
+                  <h3>MIT WPU National Project Competition</h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Natus, reiciendis inventore recusandae sed quo ullam minima!
-                    Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                    necessitatibus! Obcaecati praesentium nihil modi autem.
+                    We triumphantly won the top prize in the MIT W-PUS National Project Competition. 
+                    We received <span> First Place </span> honours for our excellent project and poster, which 
+                    is a reflection of our unwavering commitment and creative strength. 
+                    This accomplishment motivates us to strive for academic greatness moving forward.
                   </p>
+                  <br>
+                  <a href=""><h3>Certificate</h3></a>
                 </div>
               </div>
 
               <div class="achievements-content">
                 <div class="content">
-                  <div class="year">
-                    <i class="bx bxs-calendar"></i>2021-2022
-                  </div>
-                  <h3>XYZ</h3>
+                  <div class="year"><i class="bx bxs-calendar"></i>2022-2023</div>
+                  <h3>EYIC Eyantra</h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Natus, reiciendis inventore recusandae sed quo ullam minima!
-                    Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                    necessitatibus! Obcaecati praesentium nihil modi autem.
+                    In the EYIC Eyantra challenge, we reached the <span>SEMIFINALS</span> with our innovation. 
+                    We crafted a disease-detecting drone for leaves and a smart soil testing hardware,
+                    amplifying agriculture's potential with cutting-edge technology. Our journey 
+                    reflects the fusion of tech and farming for a greener tomorrow.
                   </p>
+                  <br>
+                  <a href=""><h3>Certificate</h3></a>
                 </div>
               </div>
 
               <div class="achievements-content">
                 <div class="content">
-                  <div class="year">
-                    <i class="bx bxs-calendar"></i>2022-2023
-                  </div>
-                  <h3>XYZ</h3>
+                  <div class="year"><i class="bx bxs-calendar"></i>2020-2021</div>
+                  <h3>COEP Impression High Current</h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Natus, reiciendis inventore recusandae sed quo ullam minima!
-                    Maiores, hic tempore suscipit quaerat adipisci ipsa cum
-                    necessitatibus! Obcaecati praesentium nihil modi autem.
+                    I contributed electric musical energy to the stage as a keyboard player to the high-current 
+                    COEP Impression event, resulting in an amazing aural experience that the audience could not forget.
                   </p>
+                  <br>
+                  <a href=""><h3>Certificate</h3></a>
+                </div>
+              </div>
+              
+              <div class="achievements-content">
+                <div class="content">
+                  <div class="year"><i class="bx bxs-calendar"></i>2017-2018</div>
+                  <h3>Regional Level Keyboard Player</h3>
+                  <p>
+                    As a keyboardist at the regional level, I focus my enthusiasm on creating melodies 
+                    that cross boundaries and stir the soul. Each note is evidence of my commitment and creativity.
+                  </p>
+                  <br>
+                  <a href=""><h3>Certificate</h3></a>
                 </div>
               </div>
             </div>
