--- a/index.html
+++ b/index.html
@@ -329,6 +329,45 @@
       </div>
     </section>
 
+    <!-- Certification !-->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">My<span> Certifications</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="background.png" alt="Certificate 1" />
+          <div class="portfolio-layer">
+            <h5>Certificate</h5>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="background.png" alt="Certificate 1" />
+          <div class="portfolio-layer">
+            <h5>Certificate</h5>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="background.png" alt="Certificate 1" />
+          <div class="portfolio-layer">
+            <h5>Certificate</h5>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="background.png" alt="Certificate 1" />
+          <div class="portfolio-layer">
+            <h5>Certificate</h5>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hobbies -->
     <div class="container">
       <br>
       <br>
@@ -337,7 +376,7 @@
         <div class="product">
           <img src="coder.png" alt="Product Image" />
           <br />
-          <h3>XYZ</h3>
+          <h3>KeyBoard Player</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
             reiciendis inventore recusandae sed quo ullam minima!
@@ -348,7 +387,7 @@
         <div class="product">
           <img src="coder.png" alt="Product Image" />
           <br />
-          <h3>XYZ</h3>
+          <h3>Cycling</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
             reiciendis inventore recusandae sed quo ullam minima!
@@ -360,7 +399,7 @@
         <div class="product">
           <img src="coder.png" alt="Product Image" />
           <br />
-          <h3>XYZ</h3>
+          <h3>Classical Harmonium Player</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
             reiciendis inventore recusandae sed quo ullam minima!
