--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           creativity and technology collide, and together, we'll realise your digital aspirations.
         </p>
         <div class="social-media">
-          <a href="#" style="--i: 6"><i class="bx bxl-facebook"></i></a>
-          <a href="#" style="--i: 7"><i class="bx bxl-github"></i></a>
-          <a href="#" style="--i: 8"><i class="bx bxl-linkedin"></i></a>
-          <a href="#" style="--i: 9"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://www.facebook.com/rajat.deore.33/" style="--i: 6" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://github.com/RajatDeore7" style="--i: 7" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/rajat-deore-072260220/" style="--i: 8" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://web.whatsapp.com/send?phone=9130748305" style="--i: 9" target="_blank"><i class="bx bxl-whatsapp"></i></a>
         </div>
         <a href="https://drive.google.com/file/d/1FBUvEbLFrrd_PbSLRZhhHq0bb95t1KQ8/view?usp=sharing" class="btn">Download Resume</a>
       </div>
@@ -327,6 +327,7 @@
           </div>
         </div>
       </div>
+      <br>
     </section>
 
     <!-- Certification !-->
@@ -334,34 +335,34 @@
       <h2 class="heading">My<span> Certifications</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="background.png" alt="Certificate 1" />
+          <img src="./Certificates/ai900.png" alt="Certificate 1" />
           <div class="portfolio-layer">
-            <h5>Certificate</h5>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h5>Microsoft Azure AI900</h5>
+            <a href="https://drive.google.com/file/d/110UnoV1nlbO8SzzzrTpz4lpa3rtXsQcG/view?usp=sharing"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="background.png" alt="Certificate 1" />
+          <img src="./Certificates/nptel.png" alt="Certificate 1" />
           <div class="portfolio-layer">
-            <h5>Certificate</h5>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h5>NPTEL Python</h5>
+            <a href="https://drive.google.com/file/d/1bOm_buUOIwlSNyphZmY4Pa2Jxh9TSGg_/view?usp=sharing"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="background.png" alt="Certificate 1" />
+          <img src="./Certificates/udemy.png" alt="Certificate 1" />
           <div class="portfolio-layer">
-            <h5>Certificate</h5>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h5>Udemy Web Development</h5>
+            <a href="https://drive.google.com/file/d/1yUWbANLggshp-F6So3szA_ojuW92pcoV/view?usp=sharing"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="background.png" alt="Certificate 1" />
+          <img src="./Certificates/ui.png" alt="Certificate 1" />
           <div class="portfolio-layer">
-            <h5>Certificate</h5>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h5>Techgig UI</h5>
+            <a href="https://drive.google.com/file/d/1BZCV4spcmnbytMGkqoEjtVudE42PUUxD/view?usp=sharing"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
@@ -374,39 +375,24 @@
       <section class="Projects" id="Electronics">
         <h2 class="heading">My <span>Hobbies</span></h2>
         <div class="product">
-          <img src="coder.png" alt="Product Image" />
+          <img src="./Hobbies/piano.jpg" alt="Product Image" />
           <br />
-          <h3>KeyBoard Player</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            reiciendis inventore recusandae sed quo ullam minima!
-          </p>
-          <br />
-          <br />
+          <h3 style="text-align: center;">KeyBoard Player</h3>
+          <p>" Beyond screens, I'm a melody weaver, crafting musical journeys on the keyboard."</p>
         </div>
         <div class="product">
-          <img src="coder.png" alt="Product Image" />
+          <img src="./Hobbies/cycling.jpg" alt="Product Image" />
           <br />
-          <h3>Cycling</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            reiciendis inventore recusandae sed quo ullam minima!
-          </p>
-
-          <br />
-          <br />
+          <h3 style="text-align: center;">Cycling</h3>
+          <p>"Pedaling through life's adventures, cycling fuels my spirit with freedom, 
+            exploration, and a rush of exhilaration."</p>
         </div>
         <div class="product">
-          <img src="coder.png" alt="Product Image" />
+          <img src="./Hobbies/harmonium.jpg" alt="Product Image" />
           <br />
-          <h3>Classical Harmonium Player</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            reiciendis inventore recusandae sed quo ullam minima!
-          </p>
-
-          <br />
-          <br />
+          <h3 style="text-align: center;">Classical Harmonium Player</h3>
+          <p>"Mastering the classical harmonium, I breathe life into timeless melodies, 
+            connecting tradition with my artistic expression."</p>
         </div>
       </section>
     </div>
