--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="https://www.linkedin.com/in/rajat-deore-072260220/" style="--i: 8" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://web.whatsapp.com/send?phone=9130748305" style="--i: 9" target="_blank"><i class="bx bxl-whatsapp"></i></a>
         </div>
-        <a href="https://drive.google.com/file/d/1FBUvEbLFrrd_PbSLRZhhHq0bb95t1KQ8/view?usp=sharing" class="btn">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1FBUvEbLFrrd_PbSLRZhhHq0bb95t1KQ8/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
       </div>
       <div class="home-img">
         <img src="home.png" alt="" />
@@ -353,7 +353,7 @@
         <div class="portfolio-box">
           <img src="./Certificates/udemy.png" alt="Certificate 1" />
           <div class="portfolio-layer">
-            <h5>Udemy Web Development</h5>
+            <h5>Udemy 2022 Complete Web Development</h5>
             <a href="https://drive.google.com/file/d/1yUWbANLggshp-F6So3szA_ojuW92pcoV/view?usp=sharing"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
@@ -619,17 +619,17 @@
       <footer>
         <div id="icon">
           <div class="ic1">
-            <i class="bx bxl-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rajat-deore-072260220/" target="_blank"><i class="bx bxl-linkedin"></i></a>
           </div>
           <div class="ic1">
-            <i class="bx bxl-facebook"></i>
+            <a href="https://www.facebook.com/rajat.deore.33/" target="_blank"><i class="bx bxl-facebook"></i></a>
           </div>
           <div class="ic1">
-            <i class="bx bxl-github"></i>
+            <a href="https://github.com/RajatDeore7" target="_blank"><i class="bx bxl-github"></i></a>
           </div>
 
           <div class="ic1">
-            <i class="bx bxl-whatsapp"></i>
+            <a href="https://web.whatsapp.com/send?phone=9130748305" target="_blank"><i class="bx bxl-whatsapp"></i></a>
           </div>
         </div>
         <p>Copyright © 2023 Portfolio.com All rights reserved</p>
