--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="https://www.linkedin.com/in/rajat-deore-072260220/" style="--i: 8" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://web.whatsapp.com/send?phone=9130748305" style="--i: 9" target="_blank"><i class="bx bxl-whatsapp"></i></a>
         </div>
-        <a href="https://drive.google.com/file/d/1FBUvEbLFrrd_PbSLRZhhHq0bb95t1KQ8/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1zXu70WzH2GQssCFxMX_4O3uvNHnATfyY/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
       </div>
       <div class="home-img">
         <img src="home.png" alt="" />
@@ -91,7 +91,7 @@
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">Krushi Karmi</span>
 
             <p class="card__text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
@@ -107,7 +107,7 @@
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">WhatsApp ChatBot for Travel and Tourism</span>
 
             <p class="card__text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
@@ -123,7 +123,7 @@
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">Soil Testing Hardware</span>
 
             <p class="card__text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
@@ -139,7 +139,7 @@
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">Skin Disease Detection</span>
 
             <p class="card__text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
@@ -155,7 +155,7 @@
           </div>
 
           <div class="card__content">
-            <span class="card__title">XYZ</span>
+            <span class="card__title">PCCOER WEB</span>
 
             <p class="card__text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
